--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,10 +7,14 @@ body{
 }
 
 .foto{
-    border-radius: 50px;
-    border: 1px solid rgb(51, 51, 51);
+    border-radius: 20px;
+    border: 2px solid rgb(255, 255, 255);
+    margin: 15px;
 }
 
+#titulo{
+    padding-left: 20px;
+}
 .subtitulo{
     padding-left: 20px;
 }
@@ -24,7 +28,7 @@ body{
     padding-bottom: 0;
     padding-top: 0;
     border: 3px solid rgb(30, 104, 85);
-    margin: 10px;
+    margin: 15px;
     border-radius: 10px;
 }
 
